--- a/calculator/calculator.css
+++ b/calculator/calculator.css
@@ -15,16 +15,27 @@ body {
 
 input {
   padding: 8px;
-  font: inherit;
+  background-color: #c4b79d;
+  font-size: 18px;
+  font-style: initial;
+  border-style: solid;
+  border-radius: 10px;
+  text-align: center;
 }
 
 button {
-  padding: 8px 12px;
+  padding: 10px 28px;
   cursor: pointer;
+  background-color: #c4b79d;
+  font-size: 24px;
+  transition: transform 0.3s ease;
+  margin-top: 30px;
+  border-radius: 10px;
 }
 button:hover,
 button:focus {
-  padding: 10px 14px;
+  background-color: #dca536;
+  transform: scale(1.1);
 }
 li {
   list-style-type: none; /* Прибираємо маркери */
@@ -35,12 +46,57 @@ ul {
 }
 .head {
   text-align: center;
-  margin-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 70px;
   font-size: 48px;
 }
 .login-form {
+  font-size: 24px;
 }
 .wraper-box {
   display: flex;
   align-items: center;
+}
+.input-number {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.input-number:focus {
+  background-color: #dca536;
+}
+.wrap-btn {
+  display: flex;
+  justify-content: center;
+}
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 150px;
+  height: 3px;
+  background-color: #c4b79d;
+  outline: none;
+  opacity: 0.7;
+  transition: opacity 0.2s;
+}
+
+input[type="range"]:hover {
+  opacity: 1;
+  background-color: #dca536;
+}
+
+/* Основний стиль для WebKit браузерів */
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background: #101f02;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px;
+  background: #101f02;
+  border-radius: 5px;
 }
