--- a/calculator/calculator.css
+++ b/calculator/calculator.css
@@ -11,12 +11,15 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 input {
-  padding: 8px;
+  padding: 4px;
   background-color: #c4b79d;
-  font-size: 18px;
+  font-size: 10px;
   font-style: initial;
   border-style: solid;
   border-radius: 10px;
@@ -44,22 +47,24 @@ ul {
   margin-left: 0; /* Відступ зліва в браузері IE і Opera */
   padding-left: 0; /* Відступ зліва в браузері Firefox, Safari, Chrome */
 }
+
 .head {
   text-align: center;
   margin-top: 50px;
   margin-bottom: 70px;
-  font-size: 48px;
-}
-.login-form {
   font-size: 24px;
 }
+
 .wraper-box {
   display: flex;
   align-items: center;
 }
+.login-form {
+  font-size: 10px;
+}
 .input-number {
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .input-number:focus {
   background-color: #dca536;
@@ -70,7 +75,7 @@ ul {
 }
 input[type="range"] {
   -webkit-appearance: none;
-  width: 150px;
+  width: 70px;
   height: 3px;
   background-color: #c4b79d;
   outline: none;
@@ -99,4 +104,97 @@ input[type="range"]::-webkit-slider-runnable-track {
   height: 5px;
   background: #101f02;
   border-radius: 5px;
+}
+.money {
+  position: absolute;
+  top: -50px;
+  width: 100px;
+  height: 50px;
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/0/0e/1000_hryvnia_2019_front.png"); /* замініть на реальну URL зображення грошей */
+  background-size: cover;
+  animation: fall linear infinite;
+}
+@keyframes fall {
+  to {
+    transform: translateY(100vh);
+  }
+}
+
+@media screen and (min-width: 375px) {
+  .head {
+    font-size: 26px;
+  }
+  .login-form {
+    font-size: 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .head {
+    font-size: 38px;
+  }
+  .login-form {
+    font-size: 18px;
+  }
+  .input-number {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  input {
+    padding: 6px;
+    background-color: #c4b79d;
+    font-size: 16px;
+    font-style: initial;
+    border-style: solid;
+    border-radius: 10px;
+    text-align: center;
+  }
+  input[type="range"] {
+    -webkit-appearance: none;
+    width: 100px;
+    height: 3px;
+    background-color: #c4b79d;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+  }
+
+  input[type="range"]:hover {
+    opacity: 1;
+    background-color: #dca536;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .head {
+    font-size: 48px;
+  }
+  .login-form {
+    font-size: 24px;
+  }
+  input {
+    padding: 8px;
+    background-color: #c4b79d;
+    font-size: 18px;
+    font-style: initial;
+    border-style: solid;
+    border-radius: 10px;
+    text-align: center;
+  }
+  .input-number {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  input[type="range"] {
+    -webkit-appearance: none;
+    width: 150px;
+    height: 3px;
+    background-color: #c4b79d;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+  }
+
+  input[type="range"]:hover {
+    opacity: 1;
+    background-color: #dca536;
+  }
 }
